# owl

./: .gitignore  docker-compose.yaml  pyproject.toml  tasks.py
bat/: test.bat
bot/encryption/: rsa.py  rsa_simple.py
bot/keylogger/: key_logger.py
bot/telegram/: send_information.py
cmd/bat/: send_information.bat
cmd/sh/: send_information.sh
config/: config.json  logger_config.py  settings.py  settings_v2.py
data/: encrypted.txt  env  output.txt
design_patterns/: builder.py  observer.py  singleton.py
gui/: bot_app.py  database.py  mongo_gui.py  test_gui.py  test_todo.py  test_todo_2.py  test_todo_3.py  todo_app.py
gui/bot_app/: app.py
gui/bot_app/controllers/: bot_controller.py
gui/bot_app/entities/: bot.py  user.py
gui/bot_app/models/: bot.py  bot_model.py  user.py  user_model.py
gui/bot_app/views/: bot_form.py  bot_view.py
gui/common/: database.py
gui/controllers/: bot_controller.py
gui/forms/: bot_form.py
gui/models/: bot_model.py  user_model.py
gui/todo_app/: app.py  config.py  main.py
gui/todo_app/controllers/: main_controller.py  todo_controller.py  todo_list_controller.py  todo_table_controller.py
gui/todo_app/models/: todo.py
gui/todo_app/views/: add_todo_view.py  edit_todo_view.py  main_view.py  todo_form.py  todo_list_view.py  todo_table_view.py  todo_view.py
models/: bot_model.py  browser.py  data.py  decrypt.py  firefox_decrypt.py  platform.py  profile.py  secret_key.py
setup/: setup.bat  setup.sh
test/: test.bat  test.sh
utils/: decorator.py  file.py  helpers.py  string.py
